// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test module option 'defaults' with one unit should do not use defaults 1`] = `
Object {
  "simple.simple": Object {
    "UnitType": "simple",
  },
}
`;

exports[`Test module option 'defaults' with one unit should do not use defaults with given properties 1`] = `
Object {
  "simple.simple": Object {
    "Id": "placeholderId",
    "Requires": "",
    "UnitType": "simple",
  },
}
`;
